Fixing Verification Mobile Styling

--- a/website_frontend/src/components/EmailIcon/EmailIcon.module.css
+++ b/website_frontend/src/components/EmailIcon/EmailIcon.module.css
@@ -17,3 +17,9 @@
 .mailContainer img {
     width: 80%;
 }
+
+@media only screen and (max-width: 768px) {
+    .mailContainer a {
+        width: 100%;
+    }
+}
