--- a/website_frontend/src/pages/Home.module.css
+++ b/website_frontend/src/pages/Home.module.css
@@ -259,4 +259,9 @@
     .sectionOneContainer h1 {
         font-size: 40px;
     }
+
+    .eventContainer {
+        margin-bottom: 0;
+        flex-wrap: wrap;
+    }
 }
